| Summary: | ASTERISK-25015: DNS Tests: NAPTR Nominal - Failover of preferences | ||||||||
| Reporter: | Matt Jordan (mjordan) | Labels: | |||||||
| Date Opened: | 2015-04-24 11:43:25 | Date Closed: | 2015-06-11 18:43:15 | ||||||
| Priority: | Major | Regression? | |||||||
| Status: | Closed/Complete | Components: | Tests/testsuite | ||||||
| Versions: | Frequency of Occurrence | ||||||||
| Related Issues: |
| ||||||||
| Environment: | Attachments: | ||||||||
| Description: | h2. Failover of preferences
h3. Goal Ensure that failover occurs between NAPTR records of the same order h3. Procedure # Set up the following DNS records for test.internal: {noformat} test.internal IN NAPTR 50 50 "s" "SIP+D2T" "" _sip._tcp.test.internal. IN NAPTR 50 60 "s" "SIP+D2U" "" _sip._udp.test.internal. _sip._udp.test.internal IN SRV 1 1 5060 sip.test.internal {noformat} # Enable NAPTR lookups for outbound SIP calls. Allow both UDP and TCP to be used for the outgoing call. # Place an outbound call to sip:test.internal # Ensure that a NAPTR lookup of test.internal occurs. # Ensure that the NAPTR lookup results in an SRV lookup for _sip._tcp.test.internal. # Ensure that the SRV lookup fails. # Ensure that an SRV lookup then occurs for _sip._udp.test.internal | ||||||||
| Comments: | |||||||||